--- a/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
+++ b/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
@@ -59,7 +59,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In following notebook I would like to create simple model to invistigate relations between speed, slope, strategy and result of cycling race"
+      "In following notebook I would like to create simple model to investigate relations between speed, slope, strategy and result of cycling race"
      ]
     },
     {
@@ -82,15 +82,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "According to motto \"Keep it simple stupid\" or just Kiss I would like to denote few nonumeric simplifications hopfully not changing dramatically the result:\n",
+      "According to motto \"Keep it simple stupid\" or just Kiss I would like to denote few no numeric simplifications hopefully not changing dramatically the result:\n",
       "- There is only one team in \"peleton\" (Team Time Trial example)\n",
       "- Team has 9 riders riding one after another (TTT)\n",
       "- Each of them has unique skills (energy_reservoir[J], mass[kg], area[m^2], order in a group)\n",
-      "- The power is generated to overcome: Air resistance, Tires-Road friction and Heigth Change\n",
+      "- The power is generated to overcome: Air resistance, Tires-Road friction and Height Change\n",
       "- There is no other energy dissipation.\n",
-      "- Energy/protein bars are available, but they are not acting imidiatelly \n",
-      " \n",
-      "    "
+      "- Energy/protein bars are available, but they are not acting immediately "
      ]
     },
     {
@@ -105,7 +103,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Combining formulas: $P = \\frac{\\Delta E}{\\Delta t}$ and $P = F_{r}v$ and assuming no other energy dissipation I can postulate formula for tiring our ciclist:\n",
+      "Combining formulas: $P = \\frac{\\Delta E}{\\Delta t}$ and $P = F_{r}v$ and assuming no other energy dissipation I can postulate formula for tiring our cyclist:\n",
       "$$\\Delta E = F_{r} v t $$"
      ]
     },
@@ -125,7 +123,7 @@
       "\n",
       "Air resistance: $F_A = \\frac{1}{2} A C_w \\rho v^2$  => $P_A  = \\frac{1}{2} A C_w \\rho v^3 $\n",
       "\n",
-      "Work againts gravity $F_g = mg$ => $P_G = mgv_y = mgvsin\\alpha$\n",
+      "Work against gravity $F_g = mg$ => $P_G = mgv_y = mgvsin\\alpha$\n",
       "\n"
      ]
     },
@@ -182,7 +180,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "I would like to model slipstream as changing air resistance coefficient in following way. If we assume cyclist in front of us changes our $C_w$ two times we can derrive a formula:\n",
+      "I would like to model slipstream as changing air resistance coefficient in following way. If we assume cyclist in front of us changes our $C_w$ two times we can derive a formula:\n",
       "$$C_w(p) = C_w(0)e^{-p \\cdot ln2}$$\n",
       "Where p is position in slipstream"
      ]
@@ -199,7 +197,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The best simplification is asumption energy is being transfered into body step by step with a rate $c/sec$ and energy bar has capacity of 300 seconds"
+      "The best simplification is assumption energy is being transfered into body step by step with a rate $c/sec$ and energy bar has capacity of 300 seconds\n"
      ]
     },
     {
