--- a/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
+++ b/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
@@ -302,7 +302,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "I would like to prepare two terains, namely famous mount ventous with following gradient map:"
+      "I would like to prepare two terrains, namely famous Mount Ventoux with following gradient map:"
      ]
     },
     {
@@ -334,7 +334,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Those numbers are the gradinets, which mathematically speaking are equal to $tan\\alpha$, which means to be over precize I would like to do following transformation"
+      "Those numbers are the gradients, which mathematically speaking are equal to $tan\\alpha$, which means to be over precise I would like to do following transformation"
      ]
     },
     {
@@ -367,9 +367,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The race code contains of several while and for each loop and it has assumption, that when rider hits 0 energy level he slows down and travel with velocity $2 m/s = 7.2 km/h$. \n",
       "\n",
-      "The race is controlled by deterministic parameters: bar_plan, speed_plan responsible for taking energy_bars and speed_plan for each km respectively. In first case I would like to assume consant speed and random bar_plan:"
+      "The race is controlled by deterministic parameters: bar_plan, speed_plan responsible for taking energy_bars and speed_plan for each km respectively. In first case I would like to assume constant speed and random bar_plan:"
      ]
     },
     {
@@ -579,7 +578,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "It is quite obvious in flat section leader is resting much more, becouse higher speed and $\\propto v^2$ dependance."
+      "It is quite obvious in flat section leader is resting much more, because higher speed and $\\propto v^2$ dependence."
      ]
     },
     {
@@ -832,7 +831,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Next time if I am brave enough I will try to find optimum strategy using simulated anealing. Dont forget to visit our webpage:"
+      "Next time if I am brave enough I will try to find optimum strategy using simulated annealing. Don't forget to visit our web page:"
      ]
     },
     {
