--- a/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
+++ b/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
@@ -450,7 +450,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Next time I will inject our created team inside race simulation. Do not forget to visit our website:"
+      "Next time I will inject our created team inside race simulation. Do not forget to visit our website:\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb> Part 5.2 Our first ride </a>->"
      ]
     },
     {
