--- a/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
+++ b/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
@@ -831,7 +831,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Next time if I am brave enough I will try to find optimum strategy using simulated annealing. Don't forget to visit our web page:"
+      "Next time if I am brave enough I will try to find optimum strategy using simulated annealing. Don't forget to visit our web page:\n",
+      "\n",
+      "<-<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Part 5.1 Creating rider </a>"
      ]
     },
     {
