--- a/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
+++ b/Project 5.2 How good Froomey can be - modeling cycling (Our first ride).ipynb
@@ -60,6 +60,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>\n",
+      "\n",
       "In following notebook I would like to use a team created in previous notebook and test them in the race!"
      ]
     },
@@ -833,7 +839,11 @@
      "source": [
       "Next time if I am brave enough I will try to find optimum strategy using simulated annealing. Don't forget to visit our web page:\n",
       "\n",
-      "<-<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Part 5.1 Creating rider </a>"
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>"
      ]
     },
     {
