--- a/Project 5.3 Annealing Froomey .ipynb
+++ b/Project 5.3 Annealing Froomey .ipynb
@@ -53,6 +53,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>\n",
+      "\n",
       "In following notebook I would like to find best strategy for climbing on Mount Ventoux using model developed in previous notebooks."
      ]
     },
@@ -15845,6 +15851,17 @@
      "metadata": {},
      "source": [
       "Next time I would like to either concentrate on something phisical (quantization by deformation for example) or play real world transport tycoon. For sure I can conclude it is going to be continued.."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>"
      ]
     },
     {
