--- a/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
+++ b/Project 5.1 How good Froomey can be - modeling and understanding cycling (creating rider) .ipynb
@@ -59,6 +59,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "In following notebook I would like to create simple model to investigate relations between speed, slope, strategy and result of cycling race"
      ]
     },
@@ -452,7 +463,11 @@
      "source": [
       "Next time I will inject our created team inside race simulation. Do not forget to visit our website:\n",
       "\n",
-      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb> Part 5.2 Our first ride </a>->"
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.1%20How%20good%20Froomey%20can%20be%20-%20modeling%20and%20understanding%20cycling%20%28creating%20rider%29%20.ipynb> Project 5.1: How good Froomey can be - modeling and understanding cycling (creating rider)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.2%20How%20good%20Froomey%20can%20be%20-%20modeling%20cycling%20%28Our%20first%20ride%29.ipynb>Project 5.2 How good Froomey can be - modeling cycling (Our first ride)</a>\n",
+      "\n",
+      "<a href = http://nbviewer.ipython.org/github/by2pie/Bike/blob/master/Project%205.3%20Annealing%20Froomey%20.ipynb> Project 5.3 Annealing Froomey</a>\n"
      ]
     },
     {
